--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,10 @@
 body {
   background-color: rgb(243, 240, 253);
 }
+.swiper-button-next:after,
+.swiper-button-prev:after{
+  color:blueviolet
+}
+.swiper-pagination-progressbar .swiper-pagination-progressbar-fill{
+  background:blueviolet !important
+}
