--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,9 @@ body {
 .swiper-pagination-progressbar .swiper-pagination-progressbar-fill{
   background:blueviolet !important
 }
+html::-webkit-scrollbar{
+  display:none;
+}
+html{
+  scrollbar-width: none;
+}
